--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <img src="browser-image-shower.png" alt="Open in browser instructions">
       `;
     } else {
-      window.location.href = "https://thatsthefinger.com/"
+      window.location.href = "https://instagram.com/_u/evelinejensen"
     }
   </script>
 </body>
